src/objects/Recruit__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Bank_Clients__c</fullName>
        <label>Bank Clients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Book_of_Business_Details__c</fullName>
        <label>Book of Business Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Broker_Protocol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broker Protocol</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Mix__c</fullName>
        <label>Business Mix (General)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_of_Current_Business_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy of Current Business Card?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employment_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employment Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exceptional_Topics__c</fullName>
        <label>Exceptional Topics</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FINRA_Broker_Check_see_below__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FINRA Broker Check (see below)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <label>Firm Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <label>Home Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Households__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Households</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recruits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Owner_ID__c</fullName>
        <label>Legacy Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Non_Protocol_Accounts__c</fullName>
        <label>Non Protocol Accounts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Production__c</fullName>
        <label>Production</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retention_Comp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retention Comp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sensitive_Subjects__c</fullName>
        <label>Sensitive Subjects</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <label>Recruit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recruit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>